# compsci

./: README.md
Algoritmos y Estructuras de Datos I/labos/labo05/: CMakeLists.txt
Algoritmos y Estructuras de Datos I/labos/labo05/lib/googletest-master/googlemock/: CMakeLists.txt
Algoritmos y Estructuras de Datos I/labos/labo05/lib/googletest-master/googlemock/scripts/: fuse_gmock_files.py
Algoritmos y Estructuras de Datos I/labos/labo05/lib/googletest-master/googlemock/src/: gmock-spec-builders.cc  gmock.cc
Algoritmos y Estructuras de Datos I/labos/labo05/lib/googletest-master/googlemock/test/: gmock-generated-actions_test.cc  gmock-generated-function-mockers_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-spec-builders_test.cc  gmock_test.cc
Algoritmos y Estructuras de Datos I/labos/labo05/lib/googletest-master/googletest/: CMakeLists.txt
Algoritmos y Estructuras de Datos I/labos/labo05/lib/googletest-master/googletest/cmake/: internal_utils.cmake
Algoritmos y Estructuras de Datos I/labos/labo05/lib/googletest-master/googletest/samples/: sample10_unittest.cc  sample1_unittest.cc  sample3_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample9_unittest.cc
Algoritmos y Estructuras de Datos I/labos/labo05/src/: ejercicios.cpp  ejercicios.h
Algoritmos y Estructuras de Datos I/labos/labo05/test/: estaOrdenada.cpp  existePico.cpp  fibonacci.cpp  indiceMinimoSubsec.cpp  ordenar.cpp  pertenece.cpp  sumaDoble.cpp  sumatoria.cpp  todosImpares.cpp
Algoritmos y Estructuras de Datos I/labos/labo07/: CMakeLists.txt
Algoritmos y Estructuras de Datos I/labos/labo07/src/matrices/: matrices.cpp  matrices.h
Algoritmos y Estructuras de Datos I/labos/labo07/src/sandia/: sandia.cpp
Algoritmos y Estructuras de Datos I/labos/labo07/test/: correrTests.cpp  elevarTEST.cpp  filasDondeAlgunosSumanNTEST.cpp  matricesQueSumanNTEST.cpp  puntajeTEST.cpp  sandiaTEST.cpp  sopaDeLetrasTEST.cpp  temperaturaPromedioTTEST.cpp  temperaturaPromedioZTest.cpp
Taller de Algebra/: algebra-tp.hs  examen.hs
(+626 files in other folders)
